# PY-PackArch

./: .gitignore  README.md  packarch.py  pacman.py  pyproject.toml  pyproyect.toml  setup.py
